9cc/token.c.c.out
token.c.c:7:15: warning: duplicate 'short' declaration specifier [-Wduplicate-decl-specifier]
    7 | typedef short short int16_t;
      |               ^~~~~
token.c.c:19:15: warning: duplicate 'short' declaration specifier [-Wduplicate-decl-specifier]
   19 | typedef short short int_least16_t;
      |               ^~~~~
token.c:96:22: warning: format string is not a string literal (potentially insecure) [-Wformat-security]
   96 |     fprintf((stderr),msg);
      |                      ^~~
token.c:96:22: note: treat the string as an argument to avoid this
   96 |     fprintf((stderr),msg);
      |                      ^
      |                      "%s", 
token.c:207:1: warning: non-void function does not return a value in all control paths [-Wreturn-type]
  207 | }
      | ^
token.c:345:5: warning: unused label 'name' [-Wunused-label]
  345 |     name:
      |     ^~~~~
token.c:394:18: error: use of undeclared label 'loop'
  394 |             goto loop;
      |                  ^
5 warnings and 1 error generated.
